--- a/templates/dhcpd.conf.erb
+++ b/templates/dhcpd.conf.erb
@@ -6,7 +6,7 @@ max-lease-time 7200;
 
 option domain-name "<%= domain %>";
 option domain-name-servers <%= nameservers.join( ', ') %>;
-option ntp-servers <%= ntpserver.join( ', ') %>;
+option ntp-servers <%= ntpservers.join( ', ') %>;
 #authoritative;
 
 #allow booting;
