tidy up quoting of things so dhcpd doesn't complain. Add /etc/default/ file for debian/ubuntu to pick interface

--- a/templates/dhcpd.conf.erb
+++ b/templates/dhcpd.conf.erb
@@ -7,9 +7,9 @@ max-lease-time 7200;
 ddns-update-style interim;
 include "<%= dnsupdatekey %>";
 <% dnsdomain.each do |dom| -%>
-zone "<%= dom %>". {
+zone <%= dom %>. {
   primary <%= nameservers.first %>;
-  key "dhcp_updater";
+  key dhcp_updater;
 }
 <% end -%>
 <% else %>
