--- a/templates/dhcpd.conf.erb
+++ b/templates/dhcpd.conf.erb
@@ -1,10 +1,17 @@
 # dhcpd.conf
+authoritative;
 
 default-lease-time 600;
 max-lease-time 7200;
 
+
 <% if has_variable?( 'dnsupdatekey' ) -%>
+ddns-updates on;
 ddns-update-style interim;
+update-static-leases on;
+use-host-decl-names on;
+
+# Key from bind
 include "<%= dnsupdatekey %>";
 <% dnsdomain.each do |dom| -%>
 zone <%= dom %>. {
@@ -19,7 +26,6 @@ ddns-update-style none;
 option domain-name "<%= dnsdomain %>";
 option domain-name-servers <%= nameservers.join( ', ') %>;
 option ntp-servers <%= ntpservers.join( ', ') %>;
-#authoritative;
 
 #allow booting;
 #allow bootp;
