Fix dnskey name in dhcpd.conf.

--- a/templates/dhcpd.conf.erb
+++ b/templates/dhcpd.conf.erb
@@ -16,7 +16,7 @@ include "<%= dnsupdatekey %>";
 <% dnsdomain.each do |dom| -%>
 zone <%= dom %>. {
   primary <%= nameservers.first %>;
-  key dhcp_updater;
+  key <%= dnsupdatekey.split('/').last %>;
 }
 <% end -%>
 <% else %>
