add ddns-hostname options for hosts

--- a/templates/dhcpd.host.erb
+++ b/templates/dhcpd.host.erb
@@ -1,4 +1,5 @@
 host <%= host %> {
-    hardware ethernet   <%= mac %>;
-    fixed-address       <%= ip %>;
+  hardware ethernet   <%= mac %>;
+  fixed-address       <%= ip %>;
+  ddns-hostname       "<%= name %>";
 }
