Make all template fragments have header comments
Without this patch it is not clear which sections of the final
dhcpd.conf file come from which template fragements.

This patch fixes the problem by adding explicit BEGIN and END comments
to each fragment template.

This also has the benefit of ensuring every concat::fragment resource
has at least some content.  This is necessary to ensure the resource
doesn't think the content is undefined and switch to source processing
as a result.

--- a/templates/dhcpd.conf-extra.erb
+++ b/templates/dhcpd.conf-extra.erb
@@ -1,6 +1,4 @@
-# ----------
-# Extra Configs
-# ----------
+# BEGIN DHCP Extra configurations
 include "<%= @dhcp_dir %>/dhcpd.pools";
 include "<%= @dhcp_dir %>/dhcpd.hosts";
-
+# END DHCP Extra configurations
