--- a/templates/dhcpd.conf.failover.erb
+++ b/templates/dhcpd.conf.failover.erb
@@ -1,15 +1,4 @@
-# ----------
-# Failover
-# ----------
-
-#key primaryserver {
-#    algorithm hmac-md5;
-#    secret "secret";
-#};
-#
-#omapi-key primaryserver;
-#omapi-port 7911;
-
+# BEGIN DHCP Failover
 failover peer "dhcp-failover" {
         <%= role %>;
         address <%= address %>;
@@ -24,4 +13,4 @@ failover peer "dhcp-failover" {
         split <%= load_split %>;
 <% end -%>
 }
-
+# END DHCP Failover
