--- a/templates/dhcpd.conf-header.erb
+++ b/templates/dhcpd.conf-header.erb
@@ -1,3 +1,4 @@
+# BEGIN DHCP Header
 # ----------
 # dhcpd.conf
 # ----------
@@ -15,5 +16,4 @@ option ntp-servers <%= ntpservers.join(', ') %>;
 option fqdn.no-client-update on;  # set the "O" and "S" flag bits
 option fqdn.rcode2 255;
 option pxegrub code 150 = text;
-
-
+# END DHCP Header
