Update templates to remove deprecation warnings
Signed-off-by: Konrad Scherer <Konrad.Scherer@windriver.com>

--- a/templates/dhcpd.pool.erb
+++ b/templates/dhcpd.pool.erb
@@ -1,38 +1,38 @@
 #################################
-# <%= name network mask %>
+# <%= @name %> <%= @network %> <%= @mask %>
 #################################
-subnet <%= network %> netmask <%= mask %> {
-<% if range != '' or failover != '' -%>
+subnet <%= @network %> netmask <%= @mask %> {
+<% if @range != '' or @failover != '' -%>
   pool
   {
-<% if failover != '' -%>
-    failover peer "<%= failover %>";
+<% if @failover != '' -%>
+    failover peer "<%= @failover %>";
 <% end -%>
-<% if range != '' -%>
-<% range.each do |r| -%>
+<% if @range != '' -%>
+<% @range.each do |r| -%>
     range <%= r %>;
 <% end -%>
 <% end -%>
   }
 <% end -%>
 
-  option subnet-mask <%= mask %>;
-<% if gateway != '' -%>
-  option routers <%= gateway %>;
+  option subnet-mask <%= @mask %>;
+<% if @gateway != '' -%>
+  option routers <%= @gateway %>;
 <% end -%>
-<% if options.is_a? Array -%>
-<%   options.each do |opt| -%>
+<% if @options.is_a? Array -%>
+<%   @options.each do |opt| -%>
   option <%= opt %>;
 <%   end -%>
-<% elsif options != '' -%>
-  option <%= options %>;
+<% elsif @options != '' -%>
+  option <%= @options %>;
 <% end -%>
-<% if parameters.is_a? Array -%>
-<%   parameters.each do |param| -%>
+<% if @parameters.is_a? Array -%>
+<%   @parameters.each do |param| -%>
   <%= param %>;
 <%   end -%>
-<% elsif parameters != '' -%>
-  <%= parameters %>;
+<% elsif @parameters != '' -%>
+  <%= @parameters %>;
 <% end -%>
 }
 
