Add nameservers and pxeserver parameters to pool
This allows users to specify different nameservers and a PXE-server. It
also minimizes the differences to theforeman/dhcp which already includes
these parameters.

--- a/templates/dhcpd.pool.erb
+++ b/templates/dhcpd.pool.erb
@@ -34,5 +34,13 @@ subnet <%= @network %> netmask <%= @mask %> {
 <% elsif @parameters != '' -%>
   <%= @parameters %>;
 <% end -%>
+<% if @nameservers and @nameservers.is_a? Array -%>
+  option domain-name-servers <%= @nameservers.sort.join(', ') %>;
+<% elsif @nameservers -%>
+  option domain-name-servers <%= @nameservers %>;
+<% end -%>
+<% if @pxeserver -%>
+  next-server <%= @pxeserver %>;
+<% end -%>
 }
 
