Accept either an array or a string as pool range
theforeman/dhcp only uses a string as range parameter so this provides
more compatibility between the modules. The README also uses a string.

Closes GH-44 and Closes GH-42

--- a/templates/dhcpd.pool.erb
+++ b/templates/dhcpd.pool.erb
@@ -8,10 +8,12 @@ subnet <%= @network %> netmask <%= @mask %> {
 <% if @failover != '' -%>
     failover peer "<%= @failover %>";
 <% end -%>
-<% if @range != '' -%>
+<% if @range and @range.is_a? Array -%>
 <% @range.each do |r| -%>
     range <%= r %>;
 <% end -%>
+<% elsif @range != '' -%>
+    range <%= @range %>;
 <% end -%>
   }
 <% end -%>
