Allow overriding the domain name per pool

--- a/templates/dhcpd.pool.erb
+++ b/templates/dhcpd.pool.erb
@@ -18,6 +18,9 @@ subnet <%= @network %> netmask <%= @mask %> {
   }
 <% end -%>
 
+<% if @domain_name and !@domain_name.empty? -%>
+  option domain-name <%= @domain_name %>;
+<% end -%>
   option subnet-mask <%= @mask %>;
 <% if @gateway != '' -%>
   option routers <%= @gateway %>;
