Set 'ddns-hostname' instead of 'option host-name' when defining a dhcp::host

--- a/templates/dhcpd.host.erb
+++ b/templates/dhcpd.host.erb
@@ -1,7 +1,7 @@
 host <%= @host %> {
   hardware ethernet   <%= @mac.upcase %>;
   fixed-address       <%= @ip %>;
-  option host-name    "<%= @name %>";
+  ddns-hostname       "<%= @name %>";
 <% if not @options.empty? -%>
 <% @options.keys.sort.each do |option| -%>
   option <%= option %> <%= @options[option] %>;
