Add optional "comment" field to host template. Parameter already on dhcp::hosts class, but not passed through to template. Also add comment line to host spec test.

--- a/templates/dhcpd.host.erb
+++ b/templates/dhcpd.host.erb
@@ -1,4 +1,7 @@
 host <%= @host %> {
+<% if not @comment.empty? -%>
+  # <%= @comment %>
+<% end -%>
   hardware ethernet   <%= @mac.upcase %>;
   fixed-address       <%= @ip %>;
   ddns-hostname       "<%= @name %>";
