--- a/templates/dhcpd.conf-ldap.erb
+++ b/templates/dhcpd.conf-ldap.erb
@@ -1,9 +1,9 @@
 # BEGIN LDAP
-ldap-port <% @ldap_port %>;
-ldap-server "<% @ldap_server %>";
-ldap-username "<% @ldap_username %>";
-ldap-password "<% @ldap_password %>";
-ldap-base-dn "<% @ldap_base_dn %>";
-ldap-method <% @ldap_method %>;
-ldap-debug-file "<% @ldap_debug_file %>";
+ldap-port <%= @ldap_port %>;
+ldap-server "<%= @ldap_server %>";
+ldap-username "<%= @ldap_username %>";
+ldap-password "<%= @ldap_password %>";
+ldap-base-dn "<%= @ldap_base_dn %>";
+ldap-method <%= @ldap_method %>;
+ldap-debug-file "<%= @ldap_debug_file %>";
 # END LDAP
