--- a/templates/dhcpd.conf-ldap.erb
+++ b/templates/dhcpd.conf-ldap.erb
@@ -5,5 +5,7 @@ ldap-username "<%= @ldap_username %>";
 ldap-password "<%= @ldap_password %>";
 ldap-base-dn "<%= @ldap_base_dn %>";
 ldap-method <%= @ldap_method %>;
+<% if @ldap_debug_file %>
 ldap-debug-file "<%= @ldap_debug_file %>";
+<% end %>
 # END LDAP
