Added option dns search domain

--- a/templates/dhcpd.conf-header.erb
+++ b/templates/dhcpd.conf-header.erb
@@ -19,6 +19,9 @@ log-facility <%= @logfacility %>;
 # ----------
 option domain-name "<%= @dnsdomain_real.first %>";
 option domain-name-servers <%= @nameservers.join(', ') %>;
+<% if @dnssearchdomains && !@dnssearchdomains.empty? -%>
+option domain-search "<%= @dnssearchdomains.join('", "') %>";
+<% end -%>
 option fqdn.no-client-update on;  # set the "O" and "S" flag bits
 option fqdn.rcode2 255;
 option pxegrub code 150 = text;
