Added ddns-update-style option

--- a/templates/dhcpd.conf.ddns.erb
+++ b/templates/dhcpd.conf.ddns.erb
@@ -4,7 +4,7 @@
 # Dynamic DNS Updates
 # ----------
 ddns-updates on;
-ddns-update-style interim;
+ddns-update-style <%= @ddns_update_style %>;
 update-static-leases on;
 use-host-decl-names on;
 
