--- a/templates/dhcpd.host.erb
+++ b/templates/dhcpd.host.erb
@@ -5,6 +5,9 @@ host <%= @host %> {
   hardware ethernet   <%= @mac.upcase %>;
   fixed-address       <%= @ip %>;
   ddns-hostname       "<%= @name %>";
+<% if @ignored -%>
+  ignore              booting;
+<% end -%>
 <% if not @options.empty? -%>
 <% @options.keys.sort.each do |option| -%>
   option <%= option %> <%= @options[option] %>;
