--- a/templates/dhcpd.pool.erb
+++ b/templates/dhcpd.pool.erb
@@ -7,6 +7,7 @@ subnet <%= @network %> netmask <%= @mask %> {
   {
 <% if @failover != '' -%>
     failover peer "<%= @failover %>";
+    deny dynamic bootp clients;
 <% end -%>
 <% if @ignore_unknown == true -%>
     ignore unknown-clients ;
