--- a/templates/dhcpd.pool6.erb
+++ b/templates/dhcpd.pool6.erb
@@ -7,6 +7,7 @@ subnet6 <%= @network %>/<%= @prefix %> {
   {
 <% if @failover != '' -%>
     failover peer "<%= @failover %>";
+    deny dynamic bootp clients;
 <% end -%>
 <% if @ignore_unknown == true -%>
     ignore unknown-clients ;
