Fix dhcp::ignoredsubnet template
It looks like the syntax is incorrect on modern Puppet versions. This
changes it to the modern style and adds a test for it.

--- a/templates/dhcpd.ignoredsubnet.erb
+++ b/templates/dhcpd.ignoredsubnet.erb
@@ -1,7 +1,7 @@
 #################################
-# <%= name network mask %>
+# <%= @name %> <%= @network %> <%= @mask %>
 #################################
-subnet <%= network %> netmask <%= mask %> {
+subnet <%= @network %> netmask <%= @mask %> {
   not authoritative;
 }
 
