Parameterised ddns-hostnames (#164)
Add parameter for ddns-hostname to allow for multiple static dhcp assignments per ddns hostname. This is necessary for hosts with several interfaces (wifi, ethernet)

--- a/templates/dhcpd.host.erb
+++ b/templates/dhcpd.host.erb
@@ -4,7 +4,7 @@ host <%= @host %> {
 <% end -%>
   hardware ethernet   <%= @mac.upcase %>;
   fixed-address       <%= @ip %>;
-  ddns-hostname       "<%= @name %>";
+  ddns-hostname       "<%= @ddns_hostname %>";
 <% if @ignored -%>
   ignore              booting;
 <% end -%>
