Enclosing the omapi secret parameter in "quotes" is a syntax error (#179)
Looks like this parameter has to be unquoted:
```
Apr  9 16:09:53 dhcp-ztp0 puppet-agent[17478]: Apr 09 16:09:53 dhcp-ztp0.ab2.staging.gigaclear.net dhcpd[17715]: /etc/dhcp/dhcpd.conf line 9: invalid base64 character 32.
Apr  9 16:09:53 dhcp-ztp0 puppet-agent[17478]: Apr 09 16:09:53 dhcp-ztp0.ab2.staging.gigaclear.net dhcpd[17715]:   secret "juZ33DXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
Apr  9 16:09:53 dhcp-ztp0 puppet-agent[17478]: Apr 09 16:09:53 dhcp-ztp0.ab2.staging.gigaclear.net dhcpd[17715]:           ^
```
```
# dhcpd -v
Internet Systems Consortium DHCP Server 4.2.5
```

--- a/templates/dhcpd.conf-header.erb
+++ b/templates/dhcpd.conf-header.erb
@@ -12,7 +12,7 @@ omapi-port <%= @omapi_port %>;
 <% if @omapi_name && @omapi_key -%>
 key <%= @omapi_name %> {
   algorithm <%= @omapi_algorithm %>;
-  secret "<%= @omapi_key %>";
+  secret <%= @omapi_key %>;
 }
 omapi-key <%= @omapi_name %>;
 <% end -%>
