Make ip parameter optional

--- a/templates/dhcpd.host.erb
+++ b/templates/dhcpd.host.erb
@@ -3,7 +3,9 @@ host <%= @host %> {
   # <%= @comment %>
 <% end -%>
   hardware ethernet   <%= @mac.upcase %>;
+<% if @ip -%>
   fixed-address       <%= @ip %>;
+<% end -%>
   ddns-hostname       "<%= @ddns_hostname %>";
 <% if @ignored -%>
   ignore              booting;
