allow dhcp::host to override default- and max-lease-time
This can be used where there's a need to have individual hosts vary from
those set for the subnet or globally.

Signed-off-by: John Florian <jflorian@doubledog.org>

--- a/templates/dhcpd.host.erb
+++ b/templates/dhcpd.host.erb
@@ -8,6 +8,12 @@ host <%= @host %> {
 <% if @ignored -%>
   ignore              booting;
 <% end -%>
+<% if @default_lease_time -%>
+  default-lease-time  <%= @default_lease_time %>;
+<% end -%>
+<% if @max_lease_time -%>
+  max-lease-time      <%= @max_lease_time %>;
+<% end -%>
 <% if not @options.empty? -%>
 <% @options.keys.sort.each do |option| -%>
   option <%= option %> <%= @options[option] %>;
